336012 Copying content from browser and pasting into Terminal results in URL instead of selected text, URL contains 0-bytes.  Part 2: use UTF-8 when copying and pasting 'url ' and 'urld'-flavor data.  The URL will still be pasted instead of the copied text (see the "part 1" patch on bug 336012).  r=josh sr=pink a/1.8.1=me